# t4chat

./: .gitignore  .gitmodules  .prettierignore  .prettierrc.yml  LICENSE.md  README.md  package.json
api/: .env  Cargo.toml  example.env
api/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  setup.rs  state.rs
api/src/convex/: attachments.rs  messages.rs  mod.rs  threads.rs
api/src/convex_serde/: de.rs  mod.rs  ser.rs
api/src/openai/: mod.rs
api/src/openrouter/: completions.rs  mod.rs  title.rs  types.rs
api/src/routes/: chat_handlers.rs  mod.rs  router.rs
api/src/routes/chat/: create.rs
api/src/routes/message/: cancel.rs  create.rs  mod.rs
api/src/routes/models/: get.rs  mod.rs
api/src/types/: export.rs  mod.rs
api/test/: message.md
api/test_data/: file-citation.json
front/: example.env.local  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  typed-router.d.ts  vite.config.ts
front/convex/: attachments.ts  auth.config.ts  crons.ts  messages.ts  models.ts  schema.ts  settings.ts  threads.ts  tsconfig.json  utils.ts
front/convex/_generated/: api.d.ts
front/src/: App.vue  main.ts  router.ts  vite-env.d.ts
front/src/assets/css/: index.css  md.css
front/src/components/: AppSidebar.vue  Chatbox.vue  CodeblockHeader.vue  CommandMenu.vue  IconInput.vue  LoadingDots.vue  LoginPage.vue  ModelSelect.vue  Name.vue  Prose.vue  Slider.vue  Theme.vue
front/src/components/commands/: Theme.vue
front/src/components/input/: SensitiveInput.vue
front/src/components/messages/: AssistantMessage.vue  MessagePartAttachment.vue  MessagePartText.vue  StreamingMessage.vue  UserMessage.vue
front/src/components/models/: ModelListItem.vue  ModelSelect.vue
front/src/components/models/icons/: BaseIcon.vue  EffortControlIcon.vue  FastIcon.vue  FileIcon.vue  ImageGenerationIcon.vue  ImageIcon.vue  ReasoningIcon.vue  WebIcon.vue  index.ts
front/src/components/ui/badge/: Badge.vue
front/src/components/ui/button/: Button.vue  index.ts
front/src/components/ui/card/: CardHeader.vue
front/src/components/ui/checkbox/: Checkbox.vue
front/src/components/ui/command/: Command.vue  CommandDialog.vue  CommandInput.vue  CommandItem.vue  CommandList.vue
front/src/components/ui/dialog/: DialogContent.vue  DialogScrollContent.vue  DialogTitle.vue
front/src/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  (+5 more)
front/src/composables/: chatbox.ts  codeblockWrap.ts  convex.ts  keys.ts  messages.ts  retryEventBus.ts  selectedModel.ts  settings.ts  streamingMessage.ts  theme.ts  useCommandMenu.ts  useInterpolatingRef.ts
front/src/lib/: api.ts  messages.json  models.json  models.ts  shiki.ts  types.ts  utils.ts
front/src/lib/types/: convex.ts  generated.ts  index.ts
front/src/pages/: chat.vue  settings.vue
front/src/pages/chat/: [thread].vue  index.vue
front/src/pages/settings/: account.vue  attachments.vue  customization.vue  history.vue  keys.vue  models.vue
front/src/plugins/: convex.ts
(+30 files in other folders)
