[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
snowflake = { git = "https://github.com/airdashgg/snowflake", version = "0.2" }
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-login = "0.17"
chrono = { version = "0.4", features = ["serde"] }
colog = { git = "https://github.com/fooooooooooooooo/rust-colog", version = "1.3" }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing-subscriber = { version = "0.3", features = ["chrono", "fmt", "json"] }
regex = "1.11"
futures = "0.3"
owo-colors = "4.2"
openai-api-rs = "6.0.6"
async-stream = "0.3.6"
convex = "0.9.0"

[dependencies.specta]
features = ["derive", "export"]
git = "https://github.com/specta-rs/specta.git"
branch = "main"

[dependencies.specta-typescript]
git = "https://github.com/specta-rs/specta.git"
branch = "main"

[dependencies.specta-serde]
git = "https://github.com/specta-rs/specta.git"
branch = "main"
